wip: compilation works